# Energy-Maintenance

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/scripts/: apply_knowledge_language_governance.py  apply_task25g_r1_kg_grounding_remediation.py  apply_task25g_r2_grounding_plan.py  approve_chinese_official_documents_for_dev_pilot.py  build_and_install_frontend.ps1  build_and_install_frontend.sh  build_task25b_r3_dev_r3_semantic_representations.py  build_task25b_r3_dev_r4_semantic_units.py  build_task25b_r3_dev_r5_semantic_units.py  build_task27a_expert_review_materials.py  build_task28a_knowledge_manifest.py  build_task28a_source_inventory.py  check_agent_artifact_conversion_flow.py  check_agent_business_tools_flow.py  check_agent_conversion_concurrency_flow.py  check_agent_runtime_flow.py  check_chinese_document_quality.py  check_chinese_engineering_benchmark.py  check_chinese_formal_corpus_gate.py  check_chinese_pilot_quality_gate.py  check_chinese_pilot_reconciliation.py  check_cloud_llm_real_optional.py  check_cloud_model_flow.py  check_cloud_model_online.py  check_contribution_flow.py  check_dashvector_config_status.py  check_dashvector_hybrid_rag_flow.py  check_dashvector_partition_capability.py  check_dashvector_real_optional.py  check_diagnosis_sop_task_agent_flow.py  check_external_api_gateway_flow.py  check_global_acceptance.py  check_huawei_official_corpus_quality.py  check_kg_business_integration.py  check_log_sanitization.py  (+444 more)
(+1669 files in other folders)
