[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-maintenance-backend"
version = "0.1.0"
description = "FastAPI backend for Huawei and Sungrow PV inverter maintenance assistance."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.27,<1.0",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg>=3.1,<4.0",
  "python-multipart>=0.0.9,<1.0",
  "pypdf>=4.0,<7.0",
  "python-docx>=1.1,<2.0",
  "httpx>=0.27,<1.0",
  "pillow>=10.4,<13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0"
]
windows = [
  "psycopg[binary]>=3.1,<4.0",
  "uvicorn[standard]>=0.27,<1.0"
]

[tool.setuptools.packages.find]
include = ["app*"]
